--- a/less/header.less
+++ b/less/header.less
@@ -8,6 +8,11 @@
 		margin: 0;
 		padding: 0;
 		width: 100%;
+		display: flex;
+		align-items: center;
+    @media (max-width: 767px) {
+      display: table;
+    }
 		.col {
 			display: inline-block;
 			float: none;
